--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,10 @@
-theme: jekyll-theme-minimal
+title: 🧑‍💻🌐
+email: hello@timomaul.de
+description: Timo Maul's CV
+logo: /timo.png
+
+# Build settings
+remote_theme: pages-themes/minimal@v0.2.0
+
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
